--- a/.ebextensions/ssl.config
+++ b/.ebextensions/ssl.config
@@ -9,6 +9,11 @@ files:
         RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R,L]
       </If>
 
+option_settings:
+  aws:elb:loadbalancer
+    LoadBalancerHTTPSPort: 443
+    SSLCertificateId: arn:aws:acm:eu-west-1:321528451064:certificate/d0731bbb-c922-4264-a7f3-a51adf56dda4
+
 Resources:
   AWSEBSecurityGroup:
     Type: AWS::EC2::SecurityGroup
