changed some yaml

--- a/.ebextensions/ssl.config
+++ b/.ebextensions/ssl.config
@@ -10,7 +10,7 @@ files:
       </If>
 
 option_settings:
-  aws:elb:loadbalancer
+  aws:elb:loadbalancer:
     LoadBalancerHTTPSPort: 443
     SSLCertificateId: arn:aws:acm:eu-west-1:321528451064:certificate/d0731bbb-c922-4264-a7f3-a51adf56dda4
 
