--- a/.ebextensions/ssl.config
+++ b/.ebextensions/ssl.config
@@ -10,25 +10,7 @@ files:
       </If>
 
 option_settings:
-  aws:elb:loadbalancer:
-    LoadBalancerHTTPSPort: 443
+  aws:elb:listener:443:
+    ListenerProtocol: HTTPS
+    InstancePort: 80
     SSLCertificateId: arn:aws:acm:eu-west-1:321528451064:certificate/d0731bbb-c922-4264-a7f3-a51adf56dda4
-
-Resources:
-  AWSEBSecurityGroup:
-    Type: AWS::EC2::SecurityGroup
-    Properties:
-      GroupDescription: "Security group to allow HTTP, HTTPS, SSH"
-      SecurityGroupIngress:
-        - SourceSecurityGroupName: { "Fn::GetAtt": ["AWSEBLoadBalancer", "SourceSecurityGroup.GroupName"] }
-          IpProtocol: tcp
-          FromPort: 443 
-          ToPort: 443
-        - SourceSecurityGroupName: { "Fn::GetAtt": ["AWSEBLoadBalancer", "SourceSecurityGroup.GroupName"] }
-          IpProtocol: tcp
-          FromPort: 80 
-          ToPort: 80
-        - CidrIp: 0.0.0.0/0
-          IpProtocol: tcp
-          FromPort: 22 
-          ToPort: 22
