updated ebextensions SG

--- a/.ebextensions/ssl.config
+++ b/.ebextensions/ssl.config
@@ -14,3 +14,6 @@ option_settings:
     ListenerProtocol: HTTPS
     InstancePort: 80
     SSLCertificateId: arn:aws:acm:eu-west-1:321528451064:certificate/d0731bbb-c922-4264-a7f3-a51adf56dda4
+  aws:elb:loadbalancer:
+    ManagedSecurityGroup: sg-0c2d1453bed9697bc
+    SecurityGroups: sg-0c2d1453bed9697bc
