--- a/.ebextensions/ssl.config
+++ b/.ebextensions/ssl.config
@@ -17,3 +17,5 @@ option_settings:
   aws:elb:loadbalancer:
     ManagedSecurityGroup: sg-0c2d1453bed9697bc
     SecurityGroups: sg-0c2d1453bed9697bc
+  aws:autoscaling:launchconfiguration:
+    SecurityGroups: sg-060e29d3bd2b114bb
