--- a/.ebextensions/ssl.config
+++ b/.ebextensions/ssl.config
@@ -16,5 +16,6 @@ option_settings:
     SSLCertificateId: arn:aws:acm:eu-west-1:321528451064:certificate/d0731bbb-c922-4264-a7f3-a51adf56dda4
   aws:elb:loadbalancer:
     ManagedSecurityGroup: sg-0c2d1453bed9697bc
+    SecurityGroups: sg-0c2d1453bed9697bc
   aws:autoscaling:launchconfiguration:
     SecurityGroups: sg-020b561c0f5bbdee5
