--- a/.ebextensions/ssl.config
+++ b/.ebextensions/ssl.config
@@ -10,9 +10,8 @@ files:
       </If>
 
 option_settings:
-  aws:elb:listener:443:
+  aws:elbv2:listener:443:
     ListenerProtocol: HTTPS
-    InstancePort: 80
     SSLCertificateId: arn:aws:acm:eu-west-1:841546299276:certificate/fdb5059b-6d07-4bdc-959c-64411d9e0f37
   aws:elb:loadbalancer:
     ManagedSecurityGroup: sg-03e690be1aeb091c7
