--- a/.ebextensions/ssl.config
+++ b/.ebextensions/ssl.config
@@ -12,7 +12,7 @@ files:
 option_settings:
   aws:elbv2:listener:443:
     ListenerProtocol: HTTPS
-    SSLCertificateId: arn:aws:acm:eu-west-1:841546299276:certificate/fdb5059b-6d07-4bdc-959c-64411d9e0f37
+    SSLCertificateArns: arn:aws:acm:eu-west-1:841546299276:certificate/198a193f-05a3-4a33-a382-0e16c641ffac
   aws:elb:loadbalancer:
     ManagedSecurityGroup: sg-03e690be1aeb091c7
     SecurityGroups: sg-03e690be1aeb091c7
