--- a/.ebextensions/ssl.config
+++ b/.ebextensions/ssl.config
@@ -11,7 +11,7 @@ files:
 
 option_settings:
   aws:elbv2:listener:443:
-    ListenerProtocol: HTTPS
+    Protocol: HTTPS
     SSLCertificateArns: arn:aws:acm:eu-west-1:841546299276:certificate/198a193f-05a3-4a33-a382-0e16c641ffac
   aws:elb:loadbalancer:
     ManagedSecurityGroup: sg-03e690be1aeb091c7
