--- a/.ebextensions/ssl.config
+++ b/.ebextensions/ssl.config
@@ -13,6 +13,6 @@ option_settings:
   aws:elbv2:listener:443:
     Protocol: HTTPS
     SSLCertificateArns: arn:aws:acm:eu-west-1:841546299276:certificate/198a193f-05a3-4a33-a382-0e16c641ffac
-  aws:elb:loadbalancer:
+  aws:elbv2:loadbalancer:
     ManagedSecurityGroup: sg-03e690be1aeb091c7
     SecurityGroups: sg-03e690be1aeb091c7
