--- a/.ebextensions/ssl.config
+++ b/.ebextensions/ssl.config
@@ -125,6 +125,14 @@ container_commands:
     command: "sleep 3"
 
 Resources:
+  sslSecurityGroupIngress: 
+    Type: AWS::EC2::SecurityGroupIngress
+    Properties:
+      GroupId: {"Fn::GetAtt" : ["AWSEBSecurityGroup", "GroupId"]}
+      IpProtocol: tcp
+      ToPort: 443
+      FromPort: 443
+      CidrIp: 0.0.0.0/0
   # Use instance profile to authenticate to S3 bucket that contains the private key
   AWSEBAutoScalingGroup:
     Metadata:
